Atualiza pom.xml para Spring Boot 3.2.2 e adiciona novas dependências. Refatora controladores para usar Jakarta Validation e implementa paginação em pedidos e cozinhas. Adiciona suporte para incluir produtos inativos em listagens. Melhora a estrutura de código e a legibilidade.