@@ -5,7 +5,7 @@ public class PedidoNaoEncontradoException extends EntidadeNaoEncontradaException
 	private static final long serialVersionUID = 1L;
 
 	public PedidoNaoEncontradoException(String codigoPedido) {
-		super(String.format("Não existe cadastro de Pedido com o código %d!", codigoPedido));
+		super("Não existe cadastro de Pedido com o código %d!".formatted(codigoPedido));
 	}
 
 }
