@@ -9,8 +9,8 @@ public class ProdutoNaoEncontradoException extends EntidadeNaoEncontradaExceptio
   }
 
   public ProdutoNaoEncontradoException(Long restauranteId, Long produtoId) {
-    this(String.format("Não existe um cadastro de produto com código %d para o restaurante de código %d",
-        produtoId, restauranteId));
+    this("Não existe um cadastro de produto com código %d para o restaurante de código %d".formatted(
+            produtoId, restauranteId));
   }
 
 }
